--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=agenda
 
-spring.datasource.url=jdbc:mysql://localhost:3306/prueba
-spring.datasource.username=root
-spring.datasource.password=ramnstein
+spring.datasource.url=jdbc:mysql://localhost:${PORT}/${DATA_BASE}
+spring.datasource.username=${USER_NAME}
+spring.datasource.password=${PASS}
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
